--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,6 +46,20 @@
             android:textSize="12sp" />
 
         <Button
+            android:id="@+id/buttonFoto"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#00E3D7D7"
+            android:onClick="tomarFoto"
+            android:text="Foto"
+            android:textColor="#000000" />
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="200dp" />
+
+        <Button
             android:id="@+id/button3"
             android:layout_width="119dp"
             android:layout_height="37dp"
