Commit estructura layouts base hecha

--- a/app/src/main/res/layout/activity_ayuda.xml
+++ b/app/src/main/res/layout/activity_ayuda.xml
@@ -7,11 +7,10 @@
     tools:context=".Ayuda">
 
     <ImageView
-        android:id="@+id/imageView6"
+        android:id="@+id/imageViewFondoCarta"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
-        android:src="@tools:sample/avatars"
         app:srcCompat="@drawable/fondo_carta" />
 
     <ImageView
