--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -59,12 +59,12 @@
             android:layout_height="200dp" />
 
         <Button
-            android:id="@+id/buttonAceptar"
+            android:id="@+id/btnAceptarInicio"
             android:layout_width="119dp"
             android:layout_height="37dp"
             android:layout_gravity="center"
             android:backgroundTint="#00E3D7D7"
-            android:onClick="siguiente"
+            android:onClick="aceptarInicio"
             android:text="Aceptar"
             android:textColor="#000000" />
     </LinearLayout>
