--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -6,6 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity2">
 
+    <TextView
+        android:id="@+id/textViewNombreJugador"
+        android:layout_width="116dp"
+        android:layout_height="35dp"
+        android:layout_gravity="right"
+        android:text="TextView" />
+
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="match_parent"
