Commit alba: adaptamos la parte de javaswing a androidstudio.SIN TERMINAR

--- a/app/src/main/res/layout/activity_has_ganado.xml
+++ b/app/src/main/res/layout/activity_has_ganado.xml
@@ -28,6 +28,7 @@
             app:srcCompat="@drawable/love_letter" />
 
         <TextView
+            android:id="@+id/lblGanador"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
