--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -64,7 +64,7 @@
             android:layout_height="37dp"
             android:layout_gravity="center"
             android:backgroundTint="#00E3D7D7"
-            android:onClick="siguiente"
+            android:onClick="aceptarInicio"
             android:text="Aceptar"
             android:textColor="#000000" />
     </LinearLayout>
