--- a/app/src/main/res/layout/activity_seleccion_carta.xml
+++ b/app/src/main/res/layout/activity_seleccion_carta.xml
@@ -62,7 +62,7 @@
                     android:textColor="@color/white" />
 
                 <Button
-                    android:id="@+id/buttonAceptarSeleccionCarta"
+                    android:id="@+id/btnAceptarAdivinar"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
