--- a/app/src/main/res/layout/activity_seleccion_carta.xml
+++ b/app/src/main/res/layout/activity_seleccion_carta.xml
@@ -55,8 +55,8 @@
 
                 <Spinner
                     android:id="@+id/spinnerCartas"
-                    android:layout_width="wrap_content"
-                    android:layout_height="51dp"
+                    android:layout_width="200dp"
+                    android:layout_height="60dp"
                     android:layout_gravity="center"
                     android:layout_marginStart="-68dp"
                     android:textColor="@color/white" />
@@ -66,8 +66,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginStart="70dp"
-                    android:layout_marginTop="-50dp"
+                    android:layout_marginStart="80dp"
+                    android:layout_marginTop="-60dp"
                     android:backgroundTint="#00E3D7D7"
                     android:fontFamily="@font/charmonman_bold"
                     android:text="Aceptar"
