--- a/app/src/main/res/layout/activity_ayuda.xml
+++ b/app/src/main/res/layout/activity_ayuda.xml
@@ -13,6 +13,17 @@
         android:scaleType="centerCrop"
         app:srcCompat="@drawable/fondo_carta" />
 
+    <Button
+        android:id="@+id/volver"
+        android:layout_width="137dp"
+        android:layout_height="80dp"
+        android:backgroundTint="#00E3D7D7"
+        android:fontFamily="@font/charmonman_bold"
+        android:onClick="volverJuego"
+        android:text="Volver"
+        android:textColor="#000000" />
+
+
     <ImageView
         android:id="@+id/imageView4"
         android:layout_width="365dp"
