dar la vuelta a la carta

--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -39,7 +39,7 @@
                 android:layout_height="166dp"
                 android:layout_gravity="center"
                 android:scaleType="fitXY"
-                app:srcCompat="@drawable/baron" />
+                app:srcCompat="@drawable/trasera" />
 
             <Button
                 android:id="@+id/btnAbrirPopUpTabla"
